Fix double border on group-list-small

--- a/src/sentry/static/sentry/less/layout.less
+++ b/src/sentry/static/sentry/less/layout.less
@@ -460,7 +460,7 @@ footer {
   text-align: center;
   color: lighten(@gray, 25);
   font-weight: 500;
-  border-top: 1px solid @trim;
+  border-top: 1px solid lighten(@trim, 3);
   margin-top: 20px;
   padding: 22px 0;
 
